32289
DSTServer.sh 更新记录
# 2018-08-22 13:18:37 更新日志 343434
东方闪电
# 2018-08-22 13:18:37 更新日志 2343343
发生的的圣诞树
# 2018-08-22 13:18:37 更新日志 123121
丹参滴丸所多所
# 2018-08-30 19:38:40 更新日志 7777777
修正了一个错误的函数名称
# 2018-09-02 21:31:04 更新日志 322323
新增MOD自动更新，新增异常退出自动重启
# 2018-09-05 12:56:49 更新日志 32798
修复玩家人数不正常的错误，突出显示一些提示
# 2018-09-05 21:48:18 更新日志 32629
修复世界设置的错误
# 2018-09-06 12:48:03 更新日志 32289
为了好看点，修改了一些文本数据，简化更新显示
修复世界配置显示不全的错误
修复了MOD增删功能的错误