@@ -24,8 +24,8 @@ if TheNet and TheNet:GetIsServer() then
         f:write("房间名称：", SERVER_DESCRIPTION, "\n")
         f:write("房间名称：", SERVER_MAXPLAYERS, "\n")
         f:write("房间名称：", SERVER_GAMEMODE, "\n")
-        f:write("房间名称：", SERVER_NAME, "\n")
-        f:write("房间名称：", SERVER_NAME, "\n")
+        f:write("房间名称：", SERVER_PASSWORDED, "\n")
+        f:write("房间名称：", SERVER_PVP, "\n")
         f:write("房间名称：", SERVER_NAME, "\n")
         f:write("房间名称：", SERVER_NAME, "\n")
         f:write("房间名称：", SERVER_NAME, "\n")
