@@ -1,4 +1,4 @@
-32289
+433434
 DSTServer.sh 更新记录
 # 2018-08-22 13:18:37 更新日志 343434
 东方闪电
@@ -18,3 +18,5 @@ DSTServer.sh 更新记录
 为了好看点，修改了一些文本数据，简化更新显示
 修复世界配置显示不全的错误
 修复了MOD增删功能的错误
+# 2018-09-16 18:31:07 更新日志 433434
+修改Bug反馈链接为 https://wqlin.com/dstscript.html
